# ecb-final-2

./: .gitignore  docker-compose.yml  pyproject.toml
A2/: .env  README.md  database.py  file_storage.py  init_db.py  main.py  requirements.txt  schema.sql  schema_with_cls.sql  security_context.py  test_file_storage.py  test_rls_file_access.py
A2/frontend/: GENLAB_UI_README.md  package-lock.json  package.json
A2/frontend/src/: App.css  App.tsx  api.ts
A2/frontend/src/pages/: AdminDashboard.tsx  Auth.tsx  Dashboard.tsx  FileManagement.tsx  GenomicAnalysis.tsx  NCBIDownloader.tsx  PatientDetails.tsx  PrimerDesigner.tsx  SequenceAnalyzer.tsx  UserDashboard.tsx
A2/frontend/src/styles/: Auth.css  Dashboard.css
A3/: API_REFERENCE.md  COMPLETION_SUMMARY.md  DNA_API_README.md  NCBI_INTEGRATION.md  QUICKSTART.md  README.md  bio_processor.py  database.py  dna_api.py  models.py  requirements.txt  test_dna.py  test_file_uploads.py  test_sample.fasta  test_sample.gb
