[project]
name = "ecb-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "biopython>=1.87",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "minio>=7.2.0",
    "pytest>=9.0.3",
    "PyJWT>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.7",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
